--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,43 @@ body {
     margin: auto 0 auto 0;
 }
 
+#images {
+    padding-left: 30px;
+    width: auto;
+}
+
+.port-entity {
+    position: relative;
+    overflow: auto;
+    height: 301px;
+    width: 301px;
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+.port-image {
+    margin: 0;
+    padding: 0;
+
+}
+
+.port-entity span {
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+    width: 100%;
+    background-color: #0F1626;
+    color: #F5F5F5;
+    z-index: 1;
+    text-align: center;
+    font-size: 22px;
+    padding: 10px 0;
+}
+
+.port-entity span:hover {
+    background-color: #FF533D;
+}
+
 ul {
     margin: auto 0;
 }
@@ -68,6 +105,57 @@ h1 {
     color: #0F1626;
     font-family: 'Tajawal', sans-serif;
     font-weight: bold;
+}
+
+h2 {
+    padding: 15px 0 5px 0px;
+    font-family: 'Roboto Slab', serif;
+    font-size: 26px;
+}
+
+form {
+    margin: 0;
+    width: auto;
+    padding: 30px;
+    padding-top: 0;
+}
+
+/* input {
+    width: 100%;
+    height: 25px;
+} */
+
+input {
+    width: 100%;
+    height: 25px;
+    border: none;        
+    padding: 4px 8px;
+    border-radius: 8px;
+}
+
+input:hover{
+    box-shadow: 0 0 2px 2px #0F1626;
+}
+
+input:focus{
+    outline: none;      
+    box-shadow: 0 0 2px 2px #FF533D;
+}
+
+
+
+button {
+    margin: 0px 30px 30px 30px;
+    font-family: 'Tajawal', sans-serif;
+    font-size: 22px;
+    color: #F5F5F5;
+    background-color: #0F1626;
+    border: 1px solid #0F1626;
+    border-radius: 8px;
+}
+
+button:hover {
+    background-color: #FF533D;
 }
 
 p {
