--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,15 +180,16 @@ a {
 
 #footer-wrapper {
     background-color: #AB987A;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     margin-top: 30px;
     border-top: 5px solid #0F1626;
+    z-index: 2;
 }
 
 footer {
-    height: 40px;
+    height: 30px;
     background-color: #AB987A;
     width: 1024px;
     margin: 0 auto;
@@ -197,6 +198,6 @@ footer {
     font-weight: 500;
     color: #0F1626;
     text-align: center;
-    padding-top: 30px;
+    padding-top: 14px;
     /* position: relative; I don't think this is nessesary  */
 }
